ftp-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftp-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ftp-server
  template:
    metadata:
      labels:
        app: ftp-server
    spec:
      containers:
      - name: ftp-server
        image: kibatic/proftpd:latest
        ports:
        - containerPort: 21
        - containerPort: 20
        volumeMounts:
        - name: ftp-volume
          mountPath: /ftp-data
      volumes:
      - name: ftp-volume
        emptyDir: {}
