php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: php
        image: php:7.4-apache
        ports:
        - containerPort: 80
        volumeMounts:
        - name: ftp-volume
          mountPath: /var/www/html
      volumes:
      - name: ftp-volume
        emptyDir: {}
