ftp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftp-service
spec:
  selector:
    app: ftp-server
  ports:
  - protocol: TCP
    port: 21
    targetPort: 21
  - protocol: TCP
    port: 20
    targetPort: 20
  type: LoadBalancer
