web-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-loadbalancer
spec:
  selector:
    app: php
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
